<resources>
    <string name="app_name">weiduart</string>
    <string name="begin_txt_title">维度影院</string>
    <string name="begin_txt_desc">一场不一样的视觉盛宴</string>
    <string name="begin_txt_jump">立即跳过</string>
    <string name="begin_txt_second">3s</string>
    <string name="guidance_txt_title">一场电影</string>
    <string name="guidance_txt_desc">荡漾你的心灵</string>
    <string name="guidance_bt_jump">立即跳转</string>
    <string name="login_ed_phone">手机号</string>
    <string name="login_ed_pass">密码</string>
    <string name="register_ed_affirmpass">确认密码</string>
    <string name="login_ck_repass">记住密码</string>
    <string name="login_ck_smlogin">自动登录</string>
    <string name="login_ck_justregister">快速注册</string>
    <string name="login_bt_login">登录</string>
    <string name="register_bt_register">注册</string>
    <string name="login_txt_third">第三方快速登录</string>
    <string name="register_txt_sex">性别</string>
    <string name="register_txt_date">出生日期</string>
    <string name="register_txt_phone">手机号</string>
    <string name="register_txt_emil">邮箱</string>
    <string name="hort_movie">热门电影</string>
    <string name="hort_showing">正在热映</string>
    <string name="upcoming">即将上映</string>
    <string name="register_txt_name">昵称</string>
    <string name="film_review">影评</string>
    <string name="film_photo">剧照</string>
    <string name="prevue">预告</string>
    <string name="details">详情</string>
    <string name="register_txt_woman">女</string>
    <string name="register_txt_man">男</string>
    <string name="comment_name">男</string>
    <string name="still_name">急招</string>
    <string name="prevue_name">预告</string>
    <string name="select_cinema">请选择适合的影院</string>
    <string name="weixin_pay">微信支付</string>
    <string name="zhifubao_pay">支付宝支付</string>
    <string name="pay">支付</string>
    <string name="cinema_name">演员名字</string>
    <string name="shidu_name">饰渡角色</string>


    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
</resources>
