<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_30">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_24"
                android:src="@drawable/address_black" />

            <TextView
                android:id="@+id/text_cinema_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_5"
                android:gravity="center"
                android:text="北京"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relay_cinema_search"
            android:layout_width="@dimen/dp_100"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/fudp_20"
            android:background="@drawable/yellowchange">

            <ImageView
                android:id="@+id/image_cinema_search"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_12"
                android:src="@mipmap/cinema_search" />

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_hortmovie"
            android:layout_width="@dimen/dp_83"
            android:layout_height="match_parent"
            android:background="@drawable/square_purple"
            android:gravity="center"
            android:text="@string/hort_movie"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/txt_hortshowing"
            android:layout_width="@dimen/dp_83"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_32"
            android:background="@drawable/square_gray"
            android:gravity="center"
            android:text="@string/hort_showing" />

        <TextView
            android:id="@+id/txt_upcoming"
            android:layout_width="@dimen/dp_83"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_32"
            android:background="@drawable/square_gray"
            android:gravity="center"
            android:text="@string/upcoming" />

    </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_24"
    android:layout_marginRight="@dimen/dp_24"
    android:layout_marginTop="@dimen/dp_10">

    <com.example.xlistviewlib.XListView
        android:id="@+id/xshowlist"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/backimage"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_alignParentBottom="true"
        android:src="@drawable/left_return" />
</RelativeLayout>

</LinearLayout>